--- a/public/themes/simpleboot3/public/assets/style/css/index.css
+++ b/public/themes/simpleboot3/public/assets/style/css/index.css
@@ -2,7 +2,7 @@
 	width: 100%;
 	overflow: hidden;
 	position: relative;
-	margin-top: 80px;
+	margin-top: 1.42rem;
 	text-align: center;
 	color: #FFFFFF;
 }
@@ -45,7 +45,7 @@
 	width: 100%;
 	text-align: center;
 	margin: 0.92rem 0;
-	border-right: solid 1px rgba(0,0,0,0.08);
+	border-right: solid 1px #F5F5F5;
 }
 .index-number .col-lg-3.col-md-3.col-sm-3.col-xs-6:last-child .item{
 	border-right:none;
@@ -348,11 +348,13 @@
 	margin-left: 0.44rem;
 	border-left: 1px #ffffff dashed;
 	padding: 0.71rem 0;
+	background: url(../imgs/logo-bg.png) right 0 no-repeat;
+	background-size: 3.57rem 3.14rem;
 }
 .index-history .index-history-box .index-history-box-left .history-box li{
 	display: flex;
 	align-items: center;
-	margin-bottom: 0.5rem;
+	margin-bottom: 0.25rem;
 }
 .index-history .index-history-box .index-history-box-left .history-box li:last-child{
 	margin-bottom: 0;
@@ -621,9 +623,252 @@
 	background: #FF5000;
 	margin: 1.07rem auto 0;
 }
+/* 关于我们页面 */
+.about .index-banner-top{
+	background: url(../imgs/about/banner.png) center center no-repeat;
+	background-size: 100% 100%;
+}
+.about .index-banner-top{
+	font-size: 0.85rem;
+}
+.about .about-tabs{
+	background: #FAFAFA;
+	line-height: 1.07rem;
+}
+.about .about-tabs ul{
+	display: flex;
+	justify-content: center;
+	margin: 0;
+}
+.about .about-tabs ul li{
+	color: #222326;
+	font-size: 0.28rem;
+	margin: 0 0.53rem;
+}
+.about .about-tabs ul li.active{
+	border-bottom: solid 4px #FF5000;
+}
+.about .about-show{
+	padding: 1.78rem 0;
+	background: #FFFFFF;
+}
+.about .about-show .about-show-box{
+	background: #FAFAFA;
+	margin-top: 1.07rem;
+}
+.about .about-show .about-show-box .about-show-box-left{
+	width: calc(50% - 35px);
+	color: #333333;
+	font-size: 0.26rem;
+	line-height: 0.53rem;
+}
+.about .about-show .about-show-box .about-show-box-left .text{
+	padding: 0.89rem 0.71rem;
+	text-align: justify;
+}
+.about .about-show .about-show-box .about-show-box-right{
+	width: calc(50% + 15px);
+}
+.about .about-show .about-show-box .about-show-box-right img{
+	width: 100%;
+}
+.about .about-show-box .index-number{
+	background: #FAFAFA;
+	border-bottom: none;
+}
+.about .about-bigger{
+	/* margin: 1.78rem 0; */
+	height: 12.85rem;
+	background: #F9F9F9;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.about .about-bigger .about-bigger-left{
+	width: calc(50% - 5px);
+}
+.about .about-bigger .about-bigger-left img{
+	width: 100%;
+	height: 12.85rem;
+}
+.about .about-bigger .about-bigger-right{
+	width: calc(50% - 25px);
+}
+.about .about-bigger .about-bigger-right ul{
+	margin: 0;
+	padding: 1.96rem 1.78rem;
+}
+.about .about-bigger .about-bigger-right ul li:not(:last-child){
+	margin-bottom: 0.89rem;
+}
+.about .about-bigger .about-bigger-right ul li .title{
+	color: #333333;
+	font-size: 0.35rem;
+	margin-bottom: 0.35rem;
+}
+.about .about-bigger .about-bigger-right ul li .text{
+	color: #666666;
+	font-size: 0.32rem;
+}
+.about .about-bigger .about-bigger-right ul li .text span:not(:last-child){
+	padding-right: 0.35rem;
+}
+.about .about-history{
+	padding: 1.78rem 0;
+	background: #FFFFFF;
+}
+.about .about-history .about-history-box{
+	margin-top: 1.07rem;
+}
+.about .about-history .about-history-box .year{
+	color: #E0E0E0;
+	font-size: 0.35rem;
+	font-weight: bolder;
+	width: 1.485rem;
+	margin-right: 1.25rem;
+	cursor: pointer;
+}
+.about .about-history .about-history-box .year .bar{
+	position: absolute;
+	width: 0.71rem;
+	height: 1px;
+	top: 50%;
+	left: 1.42rem;
+	border-bottom: 1px dashed #CED3D8;
+}
+.about .about-history .about-history-box .year.active{
+	color: #FF5000;
+}
+.about .about-history .about-history-box .list{
+	display: flex;
+	flex-wrap: nowrap;
+	margin-top: 0.71rem;
+}
+.about .about-history .about-history-box .list .time-line {
+	background: #FAFAFA;
+	width: 8.39rem;
+	margin-right: 0.17rem;
+	height: 4.64rem;
+	overflow-y: scroll;
+	border-radius: 5px;
+}
+.about .about-history .about-history-box .list .time-line.swiper-slide-active{
+	background: #FF5000;
+}
+.about .about-history .about-history-box .list .time-line .history-box {
+    margin-left: 0.44rem;
+    border-left: 1px #E0E0E0 dashed;
+    padding: 0.71rem 0;
+}
+.about .about-history .about-history-box .list .time-line .history-box li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.25rem;
+	color: #BDBDBD;
+}
+.about .about-history .about-history-box .list .time-line.swiper-slide-active .history-box{
+	background: url(../imgs/logo-bg.png) right 0 no-repeat;
+	background-size: 3.57rem 3.14rem;
+}
+.about .about-history .about-history-box .list .time-line.swiper-slide-active .history-box li{
+	color: #FFFFFF;
+}
+.about .about-history .about-history-box .list .time-line .history-box li .circular {
+    width: 0.25rem;
+    height: 0.25rem;
+    border: solid 1px #FF5000;
+    border-radius: 50%;
+    margin-left: -0.12rem;
+    background: #FFFFFF;
+	margin-right: 0.35rem;
+}
+.about .about-history .about-history-box .list .time-line .history-box li.title .circular{
+	background:#E0E0E0;
+	border: solid 1px #E0E0E0;
+}
+.about .about-history .about-history-box .list .time-line .history-box li.title{
+	font-size: 0.42rem;
+	line-height: 0.5rem;
+}
+.about .about-history .about-history-box .list .time-line .history-box li.name {
+    font-size: 0.25rem;
+    line-height: 0.5rem;
+}
+.about .about-history .about-history-box .list .time-line .history-box li.name span{
+	display: inline-block;
+	padding-right: 0.26rem;
+}
+.about .about-history .about-history-box .list .time-line.active .history-box li.title .circular{
+	background: #FFFFFF;
+}
+.about .about-message{
+	padding: 1.78rem 0;
+	background: url(../imgs/1.png) center center no-repeat;
+	background-size: 100% 100%;
+}
+.about .about-message .inner{
+	display: flex;
+	justify-content: flex-end;
+}
+.about .about-message .about-message-right{
+	width: calc(50% - 5px);
+}
+.about .about-message .about-message-right .title{
+	color: #101010;
+	font-size: 0.57rem;
+	margin-bottom: 1.07rem;
+}
+.about .about-message .about-message-right .text{
+	color: #9F6B00;
+	font-size: 0.25rem;
+	line-height: 0.53rem;
+	text-align: justify;
+}
+.about .about-message .about-message-right .text p{
+	text-indent: 0.71rem;
+}
+.about .about-qualifications{
+	padding: 1.78rem 0;
+}
+.about .about-qualifications .about-qualifications-box{
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	margin-top: 1.07rem;
+} 
+.about .about-qualifications .about-qualifications-box img{
+	display: block;
+	margin-bottom: 0.17rem;
+	width: 32.89%;
+}
+.about .about-honor{
+	padding: 1.78rem 0;
+	background: #FFFFFF;
+}
+.about .about-honor .about-honor-box{
+	margin-top: 1.07rem;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+.about .about-honor .about-honor-box img{
+	display: block;
+	margin-bottom: 0.17rem;
+	width: 32.89%;
+}
+.about .about-search{
+	padding: 1.57rem 0;
+	background: #FFFFFF;
+}
+.about .about-search .about-search-box{
+	padding: 1.42rem 2.14rem;
+	background: #FAFAFA;
+} 
+
+
 /* 联系我们页面 */
 .contact .index-banner-top{
-	background: url(../imgs/contact/banner-phone.png) center center no-repeat;
+	background: url(../imgs/contact/banner.png) center center no-repeat;
 	background-size: 100% 100%;
 }
 .contact .index-banner-top{
@@ -675,6 +920,7 @@
 	width: 100%;
 	height: 11.78rem;
 }
+
 /* 合作客户页面 */
 .customer .index-banner-top{
 	background: url(../imgs/customer/banner.png) center center no-repeat;
@@ -1023,6 +1269,15 @@
 		height: 3.6rem;
 		line-height: 3.6rem;
 		font-size: 0.93rem;
+	}
+	/* 关于我们页面 */
+	.about .index-banner-top{
+		margin-top: 50px;
+		background: url(../imgs/about/banner-phone.png) center center no-repeat;
+		background-size: 100% 100%;
+	}
+	.about .index-banner-top .title{
+		font-size: 1.6rem;
 	}
 	
 	/* 联系我们页面 */
