--- a/public/themes/simpleboot3/public/assets/style/css/news.css
+++ b/public/themes/simpleboot3/public/assets/style/css/news.css
@@ -158,3 +158,154 @@
 	text-align: left;
 	color: rgba(51, 51, 51, 1);
 }
+@media (max-width : 425px) {
+	.news .banner {
+	    width: 100%;
+	    height: 13.33rem;
+	    background-image: url(../imgs/news/banner.png);
+	    background-repeat: no-repeat;
+	    background-size: cover;
+	    overflow: hidden;
+	    text-align: center;
+	    line-height: 13.33rem;
+	}
+	
+	.news_banner_text {
+	    width: 100%;
+	    color: rgba(255, 255, 255, 1);
+	    font-size: 1.33rem;
+	    text-align: center;
+	    font-weight: bold;
+	}
+	.news .typelist{
+		height: 2rem;
+		line-height: 2rem;
+		background-color: rgba(250, 250, 250, 1);
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.news .type{
+		width: 100%;
+		height: 100%;
+		display: flex;
+		text-align: center;
+	}
+	.news .type li{
+		margin: 0 auto;
+	}
+	.news .type li.active{
+		border-bottom: solid 4px #FF5000;
+	}
+	.news .type a{
+		color: #222326;
+		font-size: 0.8rem;
+	}
+	.news .list{
+		width: 100%;
+	    padding: 1.33rem 0.67rem 1.33rem 0.67rem;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		background-color: #ffffff;
+	}
+	.news .list .item{
+		margin-bottom: 0.67rem;
+		width: 47%;
+		height: 7rem;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.news .item a{
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.news .item img{
+		width: 100%;
+		height: 5rem;
+		border-radius: 0.09rem 0.09rem 0 0;
+	}
+	.news .item .title{
+		width: 100%;
+		margin-top: 0.54rem;
+		color: #000000;
+		font-size: 0.93rem;
+		text-align: left;
+		font-weight: bold;
+		overflow: hidden;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+	}
+	.news .item .content{
+		display: none;
+	}
+	
+	.newsDetail{
+		padding: 1.33rem 0.67rem 1.33rem 0.67rem;
+	}
+	.newsDetail .breadcrumb{
+		width: 100%;
+		margin-top: 2.67rem;
+	}
+	.newsDetail .newsDetail_content{
+		padding: 0.67rem;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		background-color: #FFFFFF;
+	}
+	.newsDetail_content .title{
+		width: 100%;
+		color: rgba(51, 51, 51, 1);
+		font-size: 1.07rem;
+		text-align: center;
+		font-weight: bold;
+	}
+	.newsDetail_content .time{
+		margin-top: 0.54rem;
+		width: 100%;
+		color: rgba(153, 153, 153, 1);
+		font-size: 0.8rem;
+		text-align: left;
+	}
+	.newsDetail_content .content{
+		margin-top: 0.89rem;
+		width: 100%;
+		color: rgba(114, 116, 118, 1);
+		font-size: 0.87rem;
+		text-align: justify;
+		line-height: 1.07rem;
+	}
+	.newsDetail_content .tag{
+		width: 100%;
+		color: rgba(51, 51, 51, 1);
+		font-size: 0.8rem;
+		text-align: left;
+	}
+	.newsDetail_content .other{
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.newsDetail_content .other_item{
+		width: 100%;
+		margin-top: 0.67rem;
+		display: flex;
+		align-items: center;
+	}
+	.newsDetail_content .other .other_item .item_time{
+		width: 3.33rem;
+		font-size: 0.8rem;
+		text-align: left;
+		color: rgba(153, 153, 153, 1);
+	}
+	.newsDetail_content .other .other_item .item_title{
+		margin-left: 0.67rem;
+		font-size: 0.8rem;
+		text-align: left;
+		color: rgba(51, 51, 51, 1);
+	}
+}
