--- a/public/themes/default/static/css/carbonTrace.css
+++ b/public/themes/default/static/css/carbonTrace.css
@@ -62,6 +62,7 @@
   background-color: #fff;
   border-radius: 5px;
   overflow: hidden;
+  align-items: center;
 }
 
 .interpretation_box_img {
@@ -70,7 +71,7 @@
 
 .interpretation_box_img img {
   width: 600px;
-  height: 100%;
+  height: 300px;
   object-fit: cover;
 }
 
@@ -78,7 +79,7 @@
   padding: 30px 20px;
   color: #000;
   font-size: 14px;
-  line-height: 2;
+  line-height: 2.4;
   /* text-align: justify; */
   hyphens: auto;
 }
@@ -105,16 +106,15 @@
 .database_box_item_title {
   font-size: 16px;
   font-weight: 700;
+  line-height: 1.5;
   color: var(--primary-color);
   margin: 30px 20px;
 }
 
 .database_box_item_desc {
-  /* width: calc(); */
   font-size: 14px;
   color: var(--text6-color);
-  line-height: 1.5;
-  /* text-align: justify; */
+  line-height: 2;
   hyphens: auto;
   margin: 30px 20px;
 }
