--- a/public/themes/default/static/css/products.css
+++ b/public/themes/default/static/css/products.css
@@ -45,7 +45,7 @@ a:focus {
 }
 
 .productList {
-  padding-bottom: 100px;
+  /* padding-bottom: 100px; */
 }
 
 .productList_box {
@@ -83,7 +83,7 @@ a:focus {
 }
 
 .productList_box_item_title {
-  font-size: 15px;
+  font-size: 16px;
   color: #333;
   margin: 15px;
 }
@@ -112,6 +112,40 @@ a:focus {
   width: 12px;
   height: 12px;
   object-fit: contain;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  top: 0;
+  left: 0;
+  z-index: 999;
+  justify-content: center;
+  align-items: center;
+  /* transform: scale(0.5) translate(-100%, -100%); */
+}
+
+.popup_box {
+  background-color: rgb(0, 176, 80);
+  display: flex;
+  width: 1000px;
+}
+
+.popup_box_left {
+  font-size: 0;
+}
+
+.popup_box_left img {
+  width: 400px;
+  height: 100%;
+  object-fit: cover;
+}
+
+.popup_box_right {
+  padding: 30px;
 }
 
 @media screen and (max-width: 1199px) {
