--- a/public/themes/default/static/css/supplyChain.css
+++ b/public/themes/default/static/css/supplyChain.css
@@ -144,7 +144,7 @@
   margin-top: 25px;
   width: 100%;
   height: 36%;
-  background-color: #22C32D;
+  background-color: var(--primary-color);
   border-radius: 10px;
   text-align: center;
 }
@@ -323,7 +323,7 @@
     margin-top: 25px;
     width: 100%;
     height: 36%;
-    background-color: #22C32D;
+    background-color: var(--primary-color);
     border-radius: 10px;
     text-align: center;
   }
@@ -507,7 +507,7 @@
     margin-top: 20px;
     width: 100%;
     height:  200px;;
-    background-color: #22C32D;
+    background-color: var(--primary-color);
     border-radius: 10px;
     text-align: center;
   }
