--- a/public/themes/default/static/css/banner.css
+++ b/public/themes/default/static/css/banner.css
@@ -34,7 +34,7 @@
   height: 100%;
   object-fit: cover;
   /* 变暗 */
-  filter: brightness(0.5);
+ /* filter: brightness(0.5);*/
 }
 
 .banner_box_img_title {
